--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+/* src/App.css */
+
+:root {
+  --font-size: 16px; /* Default font size */
+}
+
+body {
+  font-size: var(--font-size);
+}
 
 body.dark-mode {
   background-color: #121212;
